<resources>
    <!--Login-->
    <string name="app_name">Login</string>
    <string name="message">💚 Protejamos la Naturaleza 💚</string>
    <string name="Welcome">💚¡BIENVENIDO!✨🎉</string>
    <string name="information">Inicia Seción con tus Datos</string>
    <string name="app_email_hint">Correo Electrónico</string>
    <string name="privacity_hint">Contraseña</string>
    <string name="login_remember">Recuérdame</string>
    <string name="password_reset">Olvidé mi Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="text_or_login_with">O Inicia Sesión Con</string>
    <string name="Register_hint">Registrarme</string>

    <!--Registro-->
    <string name="Register">REGISTRO 📝✅</string>
    <string name="register_with_your_data">Registrate con tus Datos</string>
    <string name="name">Nombre</string>
    <string name="Register_email_hint">Correo Electrónico</string>
    <string name="Register_password">Contraseña</string>
    <string name="Register_confirm_Password">Confirmar Contraseña</string>
    <string name="Cell_Phone">Celular</string>
    <string name="button_Register">Registrarme</string>
    <string name="login">Iniciar Seción</string>


</resources>