<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paisaje"
    tools:context=".login">
  
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/teal_700"
      android:alpha="0.3"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:gravity="center"
      android:layout_above="@id/card_view"
      android:padding="28dp">
    
    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:src="@drawable/mountain"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        android:textColor="@color/white"/>
  </LinearLayout>

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      app:cardCornerRadius="28dp"
      android:layout_marginBottom="-20dp"
      android:id="@+id/card_view"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Welcome"
            android:textColor="@color/my_primary"
            android:textSize="32sp"
            android:textStyle="bold"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/information"
          android:textColor="@color/black"
          android:alpha="0.7"/>

      <View
          android:layout_width="wrap_content"
          android:layout_height="40dp"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/app_email_hint"
          android:textColor="@color/black"
          android:alpha="0.7"
          android:textStyle="bold"/>
      
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          android:drawableEnd="@drawable/email_icon"/>


      <View
          android:layout_width="wrap_content"
          android:layout_height="30dp"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/black"
          android:text="@string/privacity_hint"
          android:alpha="0.7"
          android:textStyle="bold"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:drawableEnd="@drawable/password_icon"/>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_remember"
            android:layout_centerVertical="true"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_reset"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

      </RelativeLayout>

      <View
          android:layout_width="wrap_content"
          android:layout_height="30dp"/>

      <com.google.android.material.button.MaterialButton

          android:id="@+id/loginButton"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:text="@string/btn_login"
          app:cornerRadius="32dp"/>

      <View
          android:layout_width="wrap_content"
          android:layout_height="20dp"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/text_or_login_with"
          android:textColor="@color/black"
          android:layout_gravity="center"
          android:alpha="0.7"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="center">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="12dp"
            android:background="@drawable/google"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="12dp"
            android:background="@drawable/facebook"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="12dp"
            android:background="@drawable/x"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="12dp"
            android:background="@drawable/github" />

        <TextView
            android:id="@+id/textViewRegistrarme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register_hint"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="11sp"
            android:textColor="@color/teal_700"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"/>

      </LinearLayout>

    </LinearLayout>

  </androidx.cardview.widget.CardView>

  </RelativeLayout>