<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tree"
    tools:context=".Registro">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_700"
        android:alpha="0.2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"
        android:padding="28dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:src="@drawable/lol"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Respira💚Protege💚Actúa"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:textColor="@color/teal_200"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="31dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_with_your_data"
                android:textColor="@color/black"
                android:alpha="0.7"
                android:layout_gravity="center"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:drawableEnd="@drawable/person_icon"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_email_hint"
                android:textColor="@color/black"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/email_icon"/>


            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_password"
                android:textColor="@color/black"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/password_icon"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_confirm_Password"
                android:textColor="@color/black"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/segurity_icon"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cell_Phone"
                android:textColor="@color/black"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|number"
                android:drawableEnd="@drawable/cell_icon"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/button_Register"
                app:cornerRadius="32dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_or_login_with"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:alpha="0.7"/>


            <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:gravity="center">


               <ImageView
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_margin="12dp"
                   android:background="@drawable/google"/>
               <ImageView
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_margin="12dp"
                   android:background="@drawable/facebook"/>
               <ImageView
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_margin="12dp"
                   android:background="@drawable/x"/>

               <ImageView
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_margin="12dp"
                   android:background="@drawable/github" />



               <TextView
                   android:id="@+id/textViewIniciarSeción"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/login"
                   android:textStyle="bold"
                   android:fontFamily="sans-serif-medium"
                   android:textSize="11sp"
                   android:textColor="@color/teal_700"
                   android:layout_alignParentEnd="true"
                   android:layout_alignParentBottom="true"
                   android:layout_marginEnd="1dp"
                   android:layout_marginBottom="1dp"/>

           </LinearLayout>

       </LinearLayout>

   </androidx.cardview.widget.CardView>


</RelativeLayout>
